--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node Server.js"
+    "start": "node Server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,13 +17,15 @@
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "stripe": "^12.4.0",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "winston": "^3.17.0"
   }
 }
